# Digitizer_API_examples

./: .clang-format  .gitignore  CMakeLists.txt  README.md
digitizer-api/linux/Debug/include/digitizer-wrapper/: device.h  devicemanagerbase.h  devicesettingsdefines.h  devicesettingstablemodel.h  firmwaresettingsmodelrepositorybase.h  iabstractsettingsmodel.h  settingitem.h
digitizer-api/linux/Debug/include/event-packet/buffers/: bufferprocessor.h  packetbuffer.h  packetbuffer.inl  packetparser.h  packetparserworker.h  packetparserworkerbase.h  splituppacketassembler.h
digitizer-api/linux/Debug/include/event-packet/packets/: consistentchannelspectrum32.h  eventpackettype.h  phanetworkpacket.h  waveformnetworkpacket.h
digitizer-api/linux/Debug/include/event-packet/packetwrappers/: eventpacket.h
digitizer-api/linux/Debug/include/networker/: commandsupportflags.h  maintainingdeviceconnector.h  networkenums.h
digitizer-api/linux/Debug/include/protobuf-api/: api.pb.h
digitizer-api/linux/Debug/share/: digiscope-api-config.cmake  digiscope-api-targets-debug.cmake  digiscope-api-targets.cmake
digitizer-api/linux/Release/include/digitizer-wrapper/: digitizerinteractor.h  iabstractsettingsmodel.h  networkmediator.h  settingitem.h
digitizer-api/linux/Release/include/event-packet/buffers/: bufferprocessor.h  packetparser.h  packetparserworker.h  packetsizeutils.h  parserpairworker.h  wavewaveformseparator.h
digitizer-api/linux/Release/include/event-packet/packets/: devicespectrum16.h  eventpackettype.h
digitizer-api/linux/Release/include/networker/: commanddeviceconnector.h  networkworker.h  threaded.h
digitizer-api/linux/Release/include/protobuf-api/: api.grpc.pb.h
digitizer-api/linux/Release/share/: digiscope-api-targets-release.cmake  digiscope-api-targets.cmake
digitizer-api/win64/Debug/include/digitizer-wrapper/: devicemanagerwrapper.h  devicestatemachine.h  firmwaresettingstablemodel.h  networkmediator.h
digitizer-api/win64/Debug/include/event-packet/buffers/: packetparser.h  splituppacketassembler.h
digitizer-api/win64/Debug/include/event-packet/packets/: consistentchannelspectrum16.h  detectron2dnetworkpacket.h  detectronstatisticnetworkpacket.h  devicespectrum32.h  psdnetworkpacket.h  psdnetworkpacketv2.h
digitizer-api/win64/Debug/include/event-packet/packetwrappers/: eventdata.h  eventpacketheader.h
digitizer-api/win64/Debug/include/networker/: networkworker.h
digitizer-api/win64/Debug/lib/cmake/: digiscope-api-targets-debug.cmake  digiscope-api-targets.cmake
digitizer-api/win64/Release/include/digitizer-wrapper/: device.h  devicesettingstablemodel.h  digitizerinteractor.h  firmwaresettingstablemodel.h  fwsettingsvalidator.h  iabstractsettingsmodel.h
digitizer-api/win64/Release/include/networker/: networkworker.h
digitizer-api/win64/Release/include/protobuf-api/: api.grpc.pb.h  api.pb.h
digitizer-api/win64/Release/lib/: event-packet.lib  networker.lib  protobuf-api.lib
digitizer-api/win64/Release/lib/cmake/: digiscope-api-config.cmake  digiscope-api-targets-release.cmake  digiscope-api-targets.cmake
docs/: README_ENG.md  README_RU.md
src/example/: CMakeLists.txt  datatablewidget.cpp  datatablewidget.h  dataworker.cpp  dataworker.h  devicecontrolpanel.cpp  devicecontrolpanel.h  main.cpp  mainwindow.cpp  mainwindow.h  settingspanel.cpp  settingspanel.h  waveformspectrumwidget.cpp  waveformspectrumwidget.h
(+5 files in other folders)
